--- a/components/Layout/layout.module.css
+++ b/components/Layout/layout.module.css
@@ -1,7 +1,5 @@
 .container {
-    max-width: 36rem;
-    padding: 0 1rem;
-    margin: 3rem auto 6rem;
+    padding: 0 50px;
 }
 
 .header {
@@ -11,13 +9,13 @@
 }
 
 .headerImage {
-    width: 6rem;
-    height: 6rem;
+    width: 100%;
+    height: 20rem;
 }
 
 .headerHomeImage {
-    width: 8rem;
-    height: 8rem;
+    width: 100%;
+    height: 20rem;
 }
 
 .backToHome {
